[package]
name = "knot"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]

[dependencies]
bytes = "0.4.6"
byteorder = "1"
clap = "2.31.1"
env_logger = "0.5.6"
failure = "0.1.1"
failure_derive = "0.1.1"
futures = "0.1.18"
log = "0.4.1"
nom = "3.2.1"
serde = "1.0.33"
serde_derive = "1.0.33"
tokio = "0.1.3"
tokio-io = "0.1.6"
toml = "0.4.5"
